--- a/SCHEDULER-SERVER/src/main/resources/application.properties
+++ b/SCHEDULER-SERVER/src/main/resources/application.properties
@@ -7,3 +7,5 @@ spring.datasource.username=sa
 spring.datasource.password=sa
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=update
+logging.level.root=info
+tcp.port=8090
